# sellersite

./: README.md  pyproject.toml  tasks.py
main/: models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py
root/: .env.example  config.py  settings.py  urls.py
